--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
-"NamaBot":"Lexxy Botz",
-"OwnerNumber":"6285789004732",
-"OwnerName":"Lexxy-Official",
-"GithubOwner":"https://github.com/Lexxy24",
-"YoutubeOwner":"https://youtube.com/c/LEX4YOUU",
+"NamaBot":"jeebotz",
+"OwnerNumber":"6288264356392",
+"OwnerName":"jefri-Official",
+"GithubOwner":"https://github.com/jefri0321",
+"YoutubeOwner":"https://youtube.com",
 
 "LolHuman":"APIKEY_LUH",
 "DhaKey":"NisaaCantik",
